--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.25.0      # Untuk membangun antarmuka pengguna interaktif
-pandas==2.1.0          # Untuk manipulasi data
-numpy==1.25.0          # Untuk operasi numerik
-scikit-learn==1.3.1    # Untuk algoritma machine learning
-joblib==1.3.2          # Untuk menyimpan dan memuat model
-matplotlib==3.8.0      # Untuk visualisasi data
+streamlit==1.36.0
+pandas==2.2.2
+scikit-learn==1.4.2
+joblib==1.4.2
+numpy==1.26.4
